--- a/android/lib/resource/src/main/res/values-da/strings.xml
+++ b/android/lib/resource/src/main/res/values-da/strings.xml
@@ -40,15 +40,9 @@
     <string name="authentication">Godkendelse</string>
     <string name="auto_connect_and_lockdown_mode">Auto-tilslutning og Lockdown-tilstand</string>
     <string name="auto_connect_and_lockdown_mode_footer">Sørger for, at enheden altid er på VPN-tunnelen.</string>
-    <string name="auto_connect_carousel_first_slide_bottom_text">1. Når du har klikket på knappen &lt;b&gt;Gå til VPN-indstillinger&lt;/b&gt; nedenfor, skal du klikke på tandhjulet ved siden af navnet &lt;b&gt;Mullvad VPN&lt;/b&gt;.</string>
     <string name="auto_connect_carousel_first_slide_top_text">Indstillingerne for automatisk forbindelse og Lockdown-tilstand kan findes i Android- systemindstillingerne. Følg denne vejledning for at aktivere en eller begge.</string>
-    <string name="auto_connect_carousel_second_slide_bottom_text">2. For at aktivere automatisk forbindelse skal du klikke på knappen ved siden af &lt;b&gt;Altid-til VPN&lt;/b&gt;.</string>
     <string name="auto_connect_carousel_second_slide_top_text">Auto-tilslutning kaldes Altid-til VPN i Android-systemindstillingerne, og det sørger for, at du konstant er forbundet til VPN-tunnelen og automatisk forbinder efter genstart.</string>
-    <string name="auto_connect_carousel_third_slide_bottom_text">3. For at aktivere Lockdown-tilstand skal du klikke på knappen ved siden af &lt;b&gt;Bloker forbindelser uden VPN&lt;/b&gt;.&lt;br /&gt;&lt;br /&gt;&lt;b&gt;Advarsel: Denne indstilling blokerer delte apps og funktionen Lokal netværksdeling. &lt;/b&gt;</string>
-    <string name="auto_connect_carousel_third_slide_top_text">Lockdown-tilstanden kaldes &lt;b&gt;Bloker forbindelser uden VPN&lt;/b&gt; i Android-systemindstillingerne. Det hjælper med at minimere lækager, men det har nogle kendte begrænsninger, som du kan læse mere om</string>
     <string name="auto_connect_carousel_third_slide_top_text_website_link">her</string>
-    <string name="auto_connect_footer_legacy">Brug systemindstillingen &lt;b&gt;Altid til&lt;/b&gt; i stedet ved at følge vejledningen i &lt;b&gt;%1$s&lt;/b&gt; ovenfor.</string>
-    <string name="auto_connect_footer_legacy_tv">Opret automatisk forbindelse, når appen starter. Denne indstilling vil blive erstattet med en ny funktion der opretter forbindelse ved opstart af enheden i en fremtidig opdatering.</string>
     <string name="auto_connect_legacy">Automatisk forbindelse (ældre metode)</string>
     <string name="automatic">Automatisk</string>
     <string name="back">Tilbage</string>
@@ -70,9 +64,10 @@
     <string name="confirm_no_email">Du er ved at sende rapporten om problemet, men har ikke angivet hvordan vi kan kontakte dig. Hvis du ønsker et svar på din rapport, skal du indtaste en e-mail-adresse.</string>
     <string name="confirm_removal">Ja, log enhed af</string>
     <string name="congrats">Tillykke!</string>
-    <string name="connect">Gør min forbindelse sikker</string>
-    <string name="connected_using_daita">%1$s, der bruger %2$s</string>
-    <string name="connecting">Tilslutter</string>
+    <string name="connect">Tilslut</string>
+    <string name="connect_panel_active_features">Aktive funktioner</string>
+    <string name="connect_panel_connection_details">Forbindelsesoplysninger</string>
+    <string name="connected">Tilsluttet</string>
     <string name="connecting_to_daemon">Opretter forbindelse til Mullvad-systemtjeneste...</string>
     <string name="connection_details_in">Ind</string>
     <string name="continue_login">Fortsæt med login</string>
@@ -117,7 +112,6 @@
     <string name="disconnect">Afbryd forbindelse</string>
     <string name="disconnected">Afbrudt</string>
     <string name="dismiss">Afvis</string>
-    <string name="dns_content_blockers_custom_dns_warning">Bemærk: Denne indstilling kan ikke bruges i kombination med &lt;b&gt;Brug brugerdefineret DNS-server&lt;/b&gt;.</string>
     <string name="dns_content_blockers_info">Når denne funktion er aktiveret, forhindrer den enheden i at kontakte bestemte domæner eller websteder, der er kendt for at distribuere annoncer, malware, trackere og lignende.</string>
     <string name="dns_content_blockers_warning">Dette kan forårsage problemer på visse websteder, tjenester og apps.</string>
     <string name="dont_have_an_account">Har du ikke noget kontonummer?</string>
@@ -147,9 +141,11 @@
     <string name="failed_to_set_current_test_error">Kunne ikke indstilles til aktuel - API ikke tilgængelig</string>
     <string name="failed_to_set_current_unknown_error">Kunne ikke indstilles til aktuel - Ukendt årsag</string>
     <string name="faqs_and_guides">Ofte stillede spørgsmål og vejledninger</string>
+    <string name="feature_custom_dns">Brugerdefineret DNS</string>
     <string name="feature_custom_mtu">MTU</string>
     <string name="feature_dns_content_blockers">DNS-indholdsblokkere</string>
     <string name="feature_lan_sharing">Lokal netværksdeling</string>
+    <string name="feature_quantum_resistant">Kvantemodstand</string>
     <string name="feature_server_ip_override">Server IP tilsidesættelse</string>
     <string name="feature_udp_2_tcp">Tilsløring</string>
     <string name="filter">Filter</string>
@@ -238,6 +234,7 @@
     <string name="please_enter_a_valid_ip_address">Indtast en gyldig IPv4- eller IPv6-adresse</string>
     <string name="please_enter_a_valid_remote_server_port">Indtast en gyldig fjernserverport</string>
     <string name="port">Port</string>
+    <string name="port_x">Port: %1$s</string>
     <string name="privacy_disclaimer_body_first_paragraph">For at sørge for, at du har den mest sikre version og for at informere dig om eventuelle problemer med den aktuelle version, der kører, udfører appen automatisk versionstjek. Dette sender app-versionen og Android-systemversionen til Mullvad-servere. Mullvad holder tal på antallet af brugte app-versioner og Android-versioner. Dataene bliver aldrig opbevaret eller brugt på nogen måde, der kan identificere dig.</string>
     <string name="privacy_disclaimer_body_second_paragraph">Hvis funktionen split tunneling bruges, beder appen dit system om en liste over alle installerede programmer. Denne liste hentes kun i split tunnel-visningen. Listen over installerede programmer sendes aldrig fra enheden.</string>
     <string name="privacy_disclaimer_title">Privatliv</string>
@@ -317,11 +314,9 @@
     <string name="udp">UDP</string>
     <string name="udp_over_tcp_port_info">Hvilken TCP-port UDP-over-TCP tilsløringsprotokollen skal forbinde til på VPN-serveren.</string>
     <string name="undo">Fortryd</string>
-    <string name="unsecured">Ikke sikret</string>
-    <string name="unsecured_connection">IKKE-SIKRET FORBINDELSE</string>
-    <string name="unsecured_vpn_permission_error">Ikke sikret (ingen VPN-tilladelse)</string>
     <string name="unsupported_version">IKKE-UNDERSTØTTET VERSION</string>
     <string name="unsupported_version_description">Dit privatliv kan være i fare med denne ikke-understøttede appversion. Opdater den straks.</string>
+    <string name="upd_over_tcp">UDP-over-TCP</string>
     <string name="update_dns_server_dialog_title">Opdater DNS-server</string>
     <string name="update_list_name">Opdater listenavn</string>
     <string name="use_method">Brug metode</string>
