--- a/android/lib/resource/src/main/res/values-de/strings.xml
+++ b/android/lib/resource/src/main/res/values-de/strings.xml
@@ -64,9 +64,10 @@
     <string name="confirm_no_email">Sie wollen einen Problembericht senden, ohne uns die Möglichkeit zu geben, Sie zu erreichen. Wenn Sie sich eine Antwort zu Ihrem Problem wünschen, müssen Sie eine E-Mail-Adresse eingeben.</string>
     <string name="confirm_removal">Ja, von Gerät abmelden</string>
     <string name="congrats">Glückwunsch!</string>
-    <string name="connect">Meine Verbindung sichern</string>
-    <string name="connected_using_daita">%1$s mit %2$s</string>
-    <string name="connecting">Verbinden</string>
+    <string name="connect">Verbinden</string>
+    <string name="connect_panel_active_features">Aktive Funktionen</string>
+    <string name="connect_panel_connection_details">Verbindungsdetails</string>
+    <string name="connected">Verbunden</string>
     <string name="connecting_to_daemon">Verbindung zum Mullvad-Systemdienst wird hergestellt...</string>
     <string name="connection_details_in">Eingehend</string>
     <string name="continue_login">Weiter mit Anmeldung</string>
@@ -140,9 +141,11 @@
     <string name="failed_to_set_current_test_error">Konnte nicht als aktuelle gesetzt werden – API nicht erreichbar</string>
     <string name="failed_to_set_current_unknown_error">Konnte nicht als aktuelle gesetzt werden – Unbekannter Grund</string>
     <string name="faqs_and_guides">Häufig gestellte Fragen &amp; Anleitungen</string>
+    <string name="feature_custom_dns">Eigenes DNS</string>
     <string name="feature_custom_mtu">MTU</string>
     <string name="feature_dns_content_blockers">DNS-Inhaltssperren</string>
     <string name="feature_lan_sharing">Teilen im lokalen Netzwerk</string>
+    <string name="feature_quantum_resistant">Quantenresistenz</string>
     <string name="feature_server_ip_override">Server-IP überschreiben</string>
     <string name="feature_udp_2_tcp">Verschleierung</string>
     <string name="filter">Filter</string>
@@ -231,6 +234,7 @@
     <string name="please_enter_a_valid_ip_address">Bitte geben Sie eine gültige IPv4- oder IPv6-Adresse ein</string>
     <string name="please_enter_a_valid_remote_server_port">Bitte geben Sie einen gültigen Remote-Server-Port ein</string>
     <string name="port">Port</string>
+    <string name="port_x">Port: %1$s</string>
     <string name="privacy_disclaimer_body_first_paragraph">Um zu gewährleisten, dass Sie die sicherste Version haben und um Sie über eventuelle Probleme mit der aktuellen Version zu informieren, führt die App automatisch Versionsprüfungen durch. Dabei werden die App-Version und die Android-Systemversion an die Mullvad-Server gesendet. Mullvad führt Zähler für die Anzahl der verwendeten App-Versionen und Android-Versionen. Die Daten werden niemals gespeichert oder in einer Weise verwendet, die Sie identifizieren könnte.</string>
     <string name="privacy_disclaimer_body_second_paragraph">Wenn Split Tunneling verwendet wird, fragt die App Ihr System nach einer Liste aller installierten Anwendungen ab. Diese Liste wird nur in der Split-Tunneling-Ansicht abgerufen. Die Liste der installierten Anwendungen wird nie vom Gerät gesendet.</string>
     <string name="privacy_disclaimer_title">Datenschutz</string>
@@ -312,6 +316,7 @@
     <string name="undo">Rückgängig</string>
     <string name="unsupported_version">NICHT UNTERSTÜTZTE VERSION</string>
     <string name="unsupported_version_description">Ihre Privatsphäre könnte mit dieser nicht unterstützen Version der App gefährdet sein. Bitte aktualisieren Sie sie.</string>
+    <string name="upd_over_tcp">UDP über TCP</string>
     <string name="update_dns_server_dialog_title">DNS-Server aktualisieren</string>
     <string name="update_list_name">Name der Liste ändern</string>
     <string name="use_method">Methode verwenden</string>
