--- a/android/lib/resource/src/main/res/values-ja/strings.xml
+++ b/android/lib/resource/src/main/res/values-ja/strings.xml
@@ -42,11 +42,7 @@
     <string name="auto_connect_and_lockdown_mode_footer">デバイスが必ずVPNトンネルを使用するようにします。</string>
     <string name="auto_connect_carousel_first_slide_top_text">自動接続とロックダウンモードの設定はAndroidシステム設定にあります。どちらか、または両方をこのガイドに従って有効にしてください。</string>
     <string name="auto_connect_carousel_second_slide_top_text">自動接続はAndroidシステム設定で「Always-on VPN」と呼ばれており、確実に一貫してVPNトンネルに接続し、再起動の後に自動接続を行う機能です。</string>
-    <string name="auto_connect_carousel_third_slide_bottom_text">3. ロックダウンモードを有効にするには、&lt;b&gt;VPN を使用していない接続をブロックする&lt;/b&gt;の横にあるトグルボタンをクリックします。&lt;br /&gt;&lt;br /&gt;&lt;b&gt;警告: この設定では、分割アプリとローカルネットワークの共有機能がブロックされます。&lt;/b&gt;</string>
-    <string name="auto_connect_carousel_third_slide_top_text">このロックダウンモードは、Androidのシステム設定では [&lt;b&gt;VPNを使用していない接続をブロック&lt;/b&gt;] と呼ばれています。情報漏洩の可能性を低減することが可能ですが、既知の制限がいくつかあります。制限については、</string>
     <string name="auto_connect_carousel_third_slide_top_text_website_link">こちらをご覧ください。</string>
-    <string name="auto_connect_footer_legacy">上の \"&lt;b&gt;%1$s&lt;/b&gt;\" のガイドに従い、\"&lt;b&gt;Always-on&lt;/b&gt;\" システム設定を代わりに使用してください。</string>
-    <string name="auto_connect_footer_legacy_tv">アプリの起動時に自動的に接続します。この設定は、今後のアップデートで新しい \"デバイスの起動時に接続\" 機能に置き換えられます。</string>
     <string name="auto_connect_legacy">自動接続 (レガシー)</string>
     <string name="automatic">自動</string>
     <string name="back">戻る</string>
@@ -68,9 +64,10 @@
     <string name="confirm_no_email">お客様への返信先を入力せずに問題の報告を送信しようとしています。ご報告に対する返信が必要な場合は、返信先のメールアドレスを入力する必要があります。</string>
     <string name="confirm_removal">はい。デバイスをログアウトさせます</string>
     <string name="congrats">おめでとうございます！</string>
-    <string name="connect">接続を保護する</string>
-    <string name="connected_using_daita">%1$s、%2$sを使用中</string>
-    <string name="connecting">接続中</string>
+    <string name="connect">接続</string>
+    <string name="connect_panel_active_features">有効な機能</string>
+    <string name="connect_panel_connection_details">接続の詳細</string>
+    <string name="connected">接続済み</string>
     <string name="connecting_to_daemon">Mullvad システムサービスに接続中...</string>
     <string name="connection_details_in">内側</string>
     <string name="continue_login">ログインを続ける</string>
@@ -115,7 +112,6 @@
     <string name="disconnect">接続解除</string>
     <string name="disconnected">未接続</string>
     <string name="dismiss">閉じる</string>
-    <string name="dns_content_blockers_custom_dns_warning">注意: この設定を [&lt;b&gt;カスタムDNSサーバーを使う&lt;/b&gt;] と一緒に使用することはできません。</string>
     <string name="dns_content_blockers_info">この機能を有効にすると、広告、マルウェア、トラッカーなどの配信が確認されている特定のドメインまたはWebサイトへのデバイスの接続が阻止されます。</string>
     <string name="dns_content_blockers_warning">これにより、特定のWebサイト、サービス、アプリで問題が発生する可能性があります。</string>
     <string name="dont_have_an_account">アカウント番号を持っていませんか？</string>
@@ -145,9 +141,11 @@
     <string name="failed_to_set_current_test_error">現在の設定に設定できませんでした。API に到達できません</string>
     <string name="failed_to_set_current_unknown_error">現在の設定に設定できません。原因は不明です</string>
     <string name="faqs_and_guides">よくある質問とガイド</string>
+    <string name="feature_custom_dns">カスタムDNS</string>
     <string name="feature_custom_mtu">MTU</string>
     <string name="feature_dns_content_blockers">DNSコンテンツブロッカー</string>
     <string name="feature_lan_sharing">ローカルネットワーク共有</string>
+    <string name="feature_quantum_resistant">耐量子</string>
     <string name="feature_server_ip_override">サーバーIPのオーバーライド</string>
     <string name="feature_udp_2_tcp">難読化</string>
     <string name="filter">絞り込み</string>
@@ -236,6 +234,7 @@
     <string name="please_enter_a_valid_ip_address">有効な IPv4 または IPv6 アドレスを入力してください</string>
     <string name="please_enter_a_valid_remote_server_port">有効なリモートサーバーのポートを入力してください</string>
     <string name="port">ポート</string>
+    <string name="port_x">ポート: %1$s</string>
     <string name="privacy_disclaimer_body_first_paragraph">このアプリは最も安全なバージョンを使用していることを確認し、実行中の現在のバージョンに関する問題を通知できるよう、バージョンチェックを自動的に実行します。このチェックによってアプリのバージョンとAndroidシステムのバージョンがMullvadサーバーに送信されます。Mullvadは使用されているアプリのバージョンとAndroidのバージョンの数字を記憶しています。このデータがユーザーを特定できる方法で保存されたり、使用されたりすることはありません。</string>
     <string name="privacy_disclaimer_body_second_paragraph">スプリットトンネリング機能が使用されている場合、アプリはシステムにインストール済みの全アプリケーションのリストを照会します。このリストはスプリットトンネリングビューでのみ取得されます。インストール済みアプリケーションのリストがデバイスから送信されることはありません。</string>
     <string name="privacy_disclaimer_title">プライバシー</string>
@@ -256,8 +255,6 @@
     <string name="reset_to_default_button">デフォルトにリセット</string>
     <string name="save">保存</string>
     <string name="search_placeholder">検索...</string>
-    <string name="secure_connection">セキュリティ保護された接続</string>
-    <string name="secured">セキュリティ保護</string>
     <string name="select_location">場所を選択する</string>
     <string name="select_location_empty_text_first_row">&lt;b&gt;%1$s&lt;/b&gt;に該当する検索結果はありません。</string>
     <string name="select_location_empty_text_second_row">別の検索をお試しください。</string>
@@ -317,11 +314,9 @@
     <string name="udp">UDP</string>
     <string name="udp_over_tcp_port_info">UDP-over-TCP難読化プロトコルで接続する必要のあるVPNサーバーのTCPポートです。</string>
     <string name="undo">元に戻す</string>
-    <string name="unsecured">セキュリティ保護なし</string>
-    <string name="unsecured_connection">セキュリティ保護されていない接続</string>
-    <string name="unsecured_vpn_permission_error">セキュリティ保護なし (VPN のアクセス許可なし)</string>
     <string name="unsupported_version">未対応のバージョン</string>
     <string name="unsupported_version_description">このアプリバージョンはサポートされていないため、プライバシーが危険にさらされる可能性があります。今すぐアップデートしてください。</string>
+    <string name="upd_over_tcp">UDP-over-TCP</string>
     <string name="update_dns_server_dialog_title">DNS サーバーを更新</string>
     <string name="update_list_name">リスト名の更新</string>
     <string name="use_method">この方法を使用する</string>
