--- a/android/lib/resource/src/main/res/values-nb/strings.xml
+++ b/android/lib/resource/src/main/res/values-nb/strings.xml
@@ -40,15 +40,9 @@
     <string name="authentication">Autentisering</string>
     <string name="auto_connect_and_lockdown_mode">Automatisk tilkobling og låsemodus</string>
     <string name="auto_connect_and_lockdown_mode_footer">Sørger for at enheten alltid er på VPN-tunnelen.</string>
-    <string name="auto_connect_carousel_first_slide_bottom_text">1. Etter at du har klikket på &lt;b&gt;Gå til VPN-innstillinger&lt;/b&gt;-knappen nedenfor, trykker du på tannhjulet ved siden av navnet &lt;b&gt;Mullvad VPN&lt;/b&gt;.</string>
     <string name="auto_connect_carousel_first_slide_top_text">Du finner innstillingene for automatisk tilkobling og låsemodus i Androids systeminnstillinger. Følg denne veiledningen for å aktivere én eller begge.</string>
-    <string name="auto_connect_carousel_second_slide_bottom_text">2. For å aktivere «Automatisk tilkobling», klikker du på bryteren ved siden av &lt;b&gt;VPN alltid på&lt;/b&gt;.</string>
     <string name="auto_connect_carousel_second_slide_top_text">Automatisk tilkobling heter «Alltid-på-VPN» i Androids systeminnstillinger og sørger for at du alltid er tilkoblet VPN-tunnelen og automatisk tilkobling etter omstart.</string>
-    <string name="auto_connect_carousel_third_slide_bottom_text">3. Klikk på bryteren ved siden av &lt;b&gt;Blokker tilkoblinger uten VPN&lt;/b&gt; for å aktivere låsemodusen.&lt;br /&gt;&lt;br /&gt;&lt;b&gt;Advarsel: Denne innstillingen blokkerer delte apper og funksjonen «Deling over lokalt nettverk».&lt;/b&gt;</string>
-    <string name="auto_connect_carousel_third_slide_top_text">Låsemodusen kalles &lt;b&gt;Blokker tilkoblinger uten VPN&lt;/b&gt; i systeminnstillingene for Android. Den bidrar til å minimere lekkasjer, men den har noen kjente begrensninger som du kan lese mer om</string>
     <string name="auto_connect_carousel_third_slide_top_text_website_link">her</string>
-    <string name="auto_connect_footer_legacy">Bruk systeminnstillingen &lt;b&gt;Alltid på&lt;/b&gt; i stedet for å følge veiledningen i &lt;b&gt;%1$s&lt;/b&gt; ovenfor.</string>
-    <string name="auto_connect_footer_legacy_tv">Koble til automatisk når appen startes. Denne innstillingen vil i en fremtidig oppdatering bli erstattet med en ny funksjon for tilkobling ved oppstart av enheten.</string>
     <string name="auto_connect_legacy">Automatisk tilkobling (eldre)</string>
     <string name="automatic">Automatisk</string>
     <string name="back">Tilbake</string>
@@ -71,6 +65,8 @@
     <string name="confirm_removal">Ja, logg av enhet</string>
     <string name="congrats">Gratulerer!</string>
     <string name="connect">Koble til</string>
+    <string name="connect_panel_active_features">Aktive funksjoner</string>
+    <string name="connect_panel_connection_details">Tilkoblingsdetaljer</string>
     <string name="connected">Tilkoblet</string>
     <string name="connecting_to_daemon">Kobler til Mullvads systemtjeneste ...</string>
     <string name="connection_details_in">Inngående</string>
@@ -116,7 +112,6 @@
     <string name="disconnect">Koble fra</string>
     <string name="disconnected">Frakoblet</string>
     <string name="dismiss">Ignorer</string>
-    <string name="dns_content_blockers_custom_dns_warning">Merk: Denne innstillingen kan ikke brukes sammen med &lt;b&gt;Bruk egendefinert DNS-server&lt;/b&gt;.</string>
     <string name="dns_content_blockers_info">Når denne funksjonen er aktivert, forhindrer den enheten fra å kontakte bestemte domener og nettsteder som er kjent for å spre annonser, skadelig programvare, sporingsenheter og mer.</string>
     <string name="dns_content_blockers_warning">Dette kan føre til problemer på enkelte nettsteder, tjenester og apper.</string>
     <string name="dont_have_an_account">Har du ikke et kontonummer?</string>
@@ -146,9 +141,11 @@
     <string name="failed_to_set_current_test_error">Kunne ikke angi til gjeldende – API ikke tilgjengelig</string>
     <string name="failed_to_set_current_unknown_error">Kunne ikke angi til gjeldende – ukjent årsak</string>
     <string name="faqs_and_guides">Ofte stilte spørsmål og veiledninger</string>
+    <string name="feature_custom_dns">Tilpasset DNS</string>
     <string name="feature_custom_mtu">MTU</string>
     <string name="feature_dns_content_blockers">DNS-innholdsblokkering</string>
     <string name="feature_lan_sharing">Deling over lokalt nettverk</string>
+    <string name="feature_quantum_resistant">Kvantemotstand</string>
     <string name="feature_server_ip_override">Overstyring av server-IP</string>
     <string name="feature_udp_2_tcp">Tilsløring</string>
     <string name="filter">Filter</string>
@@ -237,6 +234,7 @@
     <string name="please_enter_a_valid_ip_address">Skriv inn en gyldig IPv4- eller IPv6-adresse</string>
     <string name="please_enter_a_valid_remote_server_port">Skriv inn en gyldig ekstern server-port</string>
     <string name="port">Port</string>
+    <string name="port_x">Port: %1$s</string>
     <string name="privacy_disclaimer_body_first_paragraph">For å sørge for at du har den sikreste appversjonen, og informere deg om eventuelle problemer med den versjonen som kjøres, vil appen automatisk sjekke appversjonen. Appversjonen og Android-systemversjonen blir da sendt til Mullvad-servere. Mullvad registrerer antallet brukte appversjoner og Android-versjoner. Dataen blir aldri lagret eller brukt på noen som helst måte som kan identifisere deg.</string>
     <string name="privacy_disclaimer_body_second_paragraph">Hvis funksjonen delt tunnelering brukes, vil appen be systemet ditt om en liste over alle installerte applikasjoner. Denne listen hentes bare i delt tunnelering-visningen. Listen over installerte apper sendes aldri ut fra enheten.</string>
     <string name="privacy_disclaimer_title">Personvern</string>
@@ -318,6 +316,7 @@
     <string name="undo">Angre</string>
     <string name="unsupported_version">VERSJON UTEN STØTTE</string>
     <string name="unsupported_version_description">Personvernet ditt kan være i fare med denne appversjonen som ikke støttes. Oppdater nå.</string>
+    <string name="upd_over_tcp">UDP-over-TCP</string>
     <string name="update_dns_server_dialog_title">Oppdater DNS-serveren</string>
     <string name="update_list_name">Oppdater listenavn</string>
     <string name="use_method">Bruk metode</string>
