--- a/android/lib/resource/src/main/res/values-nl/strings.xml
+++ b/android/lib/resource/src/main/res/values-nl/strings.xml
@@ -40,7 +40,6 @@
     <string name="authentication">Authenticatie</string>
     <string name="auto_connect_and_lockdown_mode">Automatisch verbinden en lockdownmodus</string>
     <string name="auto_connect_and_lockdown_mode_footer">Zorg dat het apparaat altijd de VPN-tunnel gebruikt.</string>
-    <string name="auto_connect_carousel_first_slide_bottom_text">1. Klik, nadat u op de knop &lt;b&gt;Naar VPN-instellingen&lt;/b&gt; hebt geklikt, op het tandwiel naast de naam &lt;b&gt;Mullvad VPN&lt;/b&gt;.</string>
     <string name="auto_connect_carousel_first_slide_top_text">De instellingen Automatisch verbinden en Lockdownmodus zijn te vinden in de Android-systeeminstellingen, volg deze gids om een of beide in te schakelen.</string>
     <string name="auto_connect_carousel_second_slide_top_text">Automatisch verbinden heet Altijd-aan VPN in de Android-systeeminstellingen en zorgt ervoor dat u altijd verbonden bent met de VPN-tunnel en automatisch verbinding maakt na een herstart.</string>
     <string name="auto_connect_carousel_third_slide_top_text_website_link">hier</string>
@@ -66,6 +65,8 @@
     <string name="confirm_removal">Ja, apparaat afmelden</string>
     <string name="congrats">Gefeliciteerd!</string>
     <string name="connect">Verbinden</string>
+    <string name="connect_panel_active_features">Actieve functies</string>
+    <string name="connect_panel_connection_details">Verbindingsgegevens</string>
     <string name="connected">Verbonden</string>
     <string name="connecting_to_daemon">Verbinden met Mullvad-systeemdienst...</string>
     <string name="connection_details_in">In</string>
@@ -140,9 +141,11 @@
     <string name="failed_to_set_current_test_error">Instellen als huidige mislukt. API niet bereikbaar</string>
     <string name="failed_to_set_current_unknown_error">Instellen als huidige mislukt. Reden onbekend</string>
     <string name="faqs_and_guides">Veelgestelde vragen en gidsen</string>
+    <string name="feature_custom_dns">Aangepaste DNS</string>
     <string name="feature_custom_mtu">MTU</string>
     <string name="feature_dns_content_blockers">DNS-contentblokkeringen</string>
     <string name="feature_lan_sharing">Delen op lokaal netwerk</string>
+    <string name="feature_quantum_resistant">Kwantumbestendigheid</string>
     <string name="feature_server_ip_override">Overschrijving van server-IP-adressen</string>
     <string name="feature_udp_2_tcp">Obfuscatie</string>
     <string name="filter">Filter</string>
@@ -231,6 +234,7 @@
     <string name="please_enter_a_valid_ip_address">Voer een geldig IPv4- of IPv6-adres in</string>
     <string name="please_enter_a_valid_remote_server_port">Voer een geldige poort op de externe server in</string>
     <string name="port">Poort</string>
+    <string name="port_x">Poort: %1$s</string>
     <string name="privacy_disclaimer_body_first_paragraph">Om zeker te zijn dat u de meest veilige versie hebt en om u te informeren over eventuele problemen met de huidige geactiveerde versie, voert de app automatisch versiecontroles uit. Hierbij worden de appversie en de Android-systeemversie naar de servers van Mullvad gestuurd. Mullvad houdt tellers bij voor gebruikte appversies en Android-versies. De gegevens worden nooit opgeslagen of gebruikt op een manier die u kan identificeren.</string>
     <string name="privacy_disclaimer_body_second_paragraph">Als de split-tunnelingfunctie wordt gebruikt, vraagt de app het systeem om een lijst van alle geïnstalleerde toepassingen. Deze lijst wordt alleen opgehaald in de split-tunnelingweergave. De lijst van geïnstalleerde toepassingen wordt nooit verzonden vanaf het apparaat.</string>
     <string name="privacy_disclaimer_title">Privacy</string>
@@ -310,11 +314,9 @@
     <string name="udp">UDP</string>
     <string name="udp_over_tcp_port_info">Met welke TCP-poort moet het UDP-over-TCP-obfuscatieprotocol verbinding maken op de VPN-server.</string>
     <string name="undo">Ongedaan maken</string>
-    <string name="unsecured">Onbeveiligd</string>
-    <string name="unsecured_connection">NIET-BEVEILIGDE VERBINDING</string>
-    <string name="unsecured_vpn_permission_error">Onbeveiligd (geen VPN-toestemming)</string>
     <string name="unsupported_version">NIET-ONDERSTEUNDE VERSIE</string>
     <string name="unsupported_version_description">Uw privacy kan risico lopen met deze niet-ondersteunde appversie. Werk de app nu bij.</string>
+    <string name="upd_over_tcp">UDP-over-TCP</string>
     <string name="update_dns_server_dialog_title">DNS-server bijwerken</string>
     <string name="update_list_name">Lijstnaam bijwerken</string>
     <string name="use_method">Methode gebruiken</string>
