--- a/android/lib/resource/src/main/res/values-pt/strings.xml
+++ b/android/lib/resource/src/main/res/values-pt/strings.xml
@@ -40,11 +40,8 @@
     <string name="authentication">Autenticação</string>
     <string name="auto_connect_and_lockdown_mode">Ligação automática e modo de bloqueio</string>
     <string name="auto_connect_and_lockdown_mode_footer">Assegura que o dispositivo está sempre no túnel VPN.</string>
-    <string name="auto_connect_carousel_first_slide_bottom_text">1. Após clicar no botão &lt;b&gt;Ir para as definições de VPN&lt;/b&gt; abaixo, clique na roda dentada junto ao nome da &lt;b&gt;Mullvad VPN&lt;/b&gt;.</string>
     <string name="auto_connect_carousel_first_slide_top_text">As definições da ligação automática e do modo de bloqueio podem ser encontradas nas definições do sistema Android. Siga este guia para ativar uma ou ambas as funcionalidades.</string>
     <string name="auto_connect_carousel_second_slide_top_text">A ligação automática é designada por VPN sempre ligada nas definições do sistema Android e assegura que está constantemente ligado ao túnel VPN e ligar-se-á automaticamente após o reinício.</string>
-    <string name="auto_connect_carousel_third_slide_bottom_text">3. Para ativar o modo de bloqueio, clique no botão de alternar junto a &lt;b&gt;Bloquear ligações sem VPN&lt;/b&gt;.&lt;br /&gt;&lt;br /&gt;&lt;b&gt;Aviso: esta definição bloqueia as aplicações divididas e a funcionalidade de partilha de rede local.&lt;/b&gt;</string>
-    <string name="auto_connect_carousel_third_slide_top_text">O modo de bloqueio é designado por &lt;b&gt;Bloquear ligações sem VPN&lt;/b&gt; nas definições do sistema Android. Ajuda a minimizar fugas, mas tem algumas limitações conhecidas sobre as quais pode ler mais</string>
     <string name="auto_connect_carousel_third_slide_top_text_website_link">aqui</string>
     <string name="auto_connect_legacy">Ligação automática (método antigo)</string>
     <string name="automatic">Automático</string>
@@ -67,9 +64,10 @@
     <string name="confirm_no_email">Está prestes a enviar o relatório de problema sem que tenhamos uma forma de lhe responder. Se pretender uma resposta ao seu relatório, tem de introduzir um endereço de email.</string>
     <string name="confirm_removal">Sim, desligar o dispositivo</string>
     <string name="congrats">Parabéns!</string>
-    <string name="connect">Tornar a minha ligação segura</string>
-    <string name="connected_using_daita">%1$s a utilizar %2$s</string>
-    <string name="connecting">A ligar</string>
+    <string name="connect">Ligar</string>
+    <string name="connect_panel_active_features">Funcionalidades ativas</string>
+    <string name="connect_panel_connection_details">Detalhes da ligação</string>
+    <string name="connected">Ligado</string>
     <string name="connecting_to_daemon">A ligar-se ao serviço de sistema Mulvad...</string>
     <string name="connection_details_in">Entrada</string>
     <string name="continue_login">Continuar com a ligação</string>
@@ -114,7 +112,6 @@
     <string name="disconnect">Desligar</string>
     <string name="disconnected">Desligado</string>
     <string name="dismiss">Dispensar</string>
-    <string name="dns_content_blockers_custom_dns_warning">Atenção: esta definição não pode ser utilizada em combinação com &lt;b&gt;Usar servidor DNS personalizado&lt;/b&gt;.</string>
     <string name="dns_content_blockers_info">Quando esta funcionalidade é ativada, impede que o dispositivo contacte certos domínios ou sites conhecidos por distribuir anúncios, malware, trackers e muito mais.</string>
     <string name="dns_content_blockers_warning">Pode causar problemas em alguns sites, serviços e apps.</string>
     <string name="dont_have_an_account">Não tem um número de conta?</string>
@@ -144,9 +141,11 @@
     <string name="failed_to_set_current_test_error">Erro ao definir como atual — API não alcançável</string>
     <string name="failed_to_set_current_unknown_error">Erro ao definir como atual — motivo desconhecido</string>
     <string name="faqs_and_guides">Perguntas frequentes e guias</string>
+    <string name="feature_custom_dns">DNS personalizado</string>
     <string name="feature_custom_mtu">MTU</string>
     <string name="feature_dns_content_blockers">Bloqueadores de conteúdo de DNS</string>
     <string name="feature_lan_sharing">Partilha de rede local</string>
+    <string name="feature_quantum_resistant">Resistência quântica</string>
     <string name="feature_server_ip_override">Substituição de IP de servidor</string>
     <string name="feature_udp_2_tcp">Ofuscação</string>
     <string name="filter">Filtrar</string>
@@ -235,6 +234,7 @@
     <string name="please_enter_a_valid_ip_address">Introduza um endereço IPv4 ou IPv6 válido</string>
     <string name="please_enter_a_valid_remote_server_port">Introduza uma porta de servidor remoto válida</string>
     <string name="port">Porta</string>
+    <string name="port_x">Porta: %1$s</string>
     <string name="privacy_disclaimer_body_first_paragraph">Para se certificar de que tem a versão mais segura e para o informar de quaisquer problemas com a versão atual em execução, a app efetua verificações de versão automaticamente. Esta envia a versão da app e a versão do sistema Android para os servidores da Mullvad. A Mullvad mantém um registo do número de versões da app e de versões do Android utilizadas. Os dados nunca são armazenados ou utilizados de forma a identificar o utilizador.</string>
     <string name="privacy_disclaimer_body_second_paragraph">Se for utilizada a funcionalidade de divisão do túnel, a app consulta o seu sistema para obter uma lista de todas as aplicações instaladas. Esta lista só é recuperada na vista de divisão do túnel. A lista de aplicações instaladas nunca é enviada pelo dispositivo.</string>
     <string name="privacy_disclaimer_title">Privacidade</string>
@@ -255,10 +255,7 @@
     <string name="reset_to_default_button">Repor para as predefinições</string>
     <string name="save">Guardar</string>
     <string name="search_placeholder">Pesquisar por...</string>
-    <string name="secure_connection">LIGAÇÃO SEGURA</string>
-    <string name="secured">Segura</string>
     <string name="select_location">Selecionar localização</string>
-    <string name="select_location_description">Enquanto estiver ligado, a sua localização real será mascarada com uma localização privada e segura na região selecionada.</string>
     <string name="select_location_empty_text_first_row">Sem resultados para &lt;b&gt;%1$s&lt;/b&gt;.</string>
     <string name="select_location_empty_text_second_row">Experimente uma pesquisa diferente.</string>
     <string name="send">Enviar</string>
@@ -317,11 +314,9 @@
     <string name="udp">UDP</string>
     <string name="udp_over_tcp_port_info">A que porta TCP o protocolo de ofuscação UDP sobre TCP deve ligar-se no servidor VPN.</string>
     <string name="undo">Anular</string>
-    <string name="unsecured">Insegura</string>
-    <string name="unsecured_connection">LIGAÇÃO INSEGURA</string>
-    <string name="unsecured_vpn_permission_error">Insegura (sem permissão de VPN)</string>
     <string name="unsupported_version">VERSÃO NÃO SUPORTADA</string>
     <string name="unsupported_version_description">A sua privacidade pode estar comprometida com uma versão não suportada da aplicação. Por favor efetue a atualização agora.</string>
+    <string name="upd_over_tcp">UDP sobre TCP</string>
     <string name="update_dns_server_dialog_title">Atualizar servidor DNS</string>
     <string name="update_list_name">Atualizar nome da lista</string>
     <string name="use_method">Utilizar método</string>
