--- a/android/lib/resource/src/main/res/values-ru/strings.xml
+++ b/android/lib/resource/src/main/res/values-ru/strings.xml
@@ -41,13 +41,8 @@
     <string name="auto_connect_and_lockdown_mode">Автоподключение и режим блокировки</string>
     <string name="auto_connect_and_lockdown_mode_footer">Обеспечивает постоянное подключение устройства к туннелю VPN.</string>
     <string name="auto_connect_carousel_first_slide_top_text">Настройки автоподключения и режима блокировки можно найти в системных настройках Android. Чтобы включить их, следуйте этой инструкции.</string>
-    <string name="auto_connect_carousel_second_slide_bottom_text">2. Чтобы включить автоподключение, нажмите на переключатель возле пункта &lt;b&gt;Постоянная VPN&lt;/b&gt;.</string>
     <string name="auto_connect_carousel_second_slide_top_text">В системных настройках Android автоподключение называется «Постоянная VPN». Эта опция обеспечивает постоянное подключение к туннелю VPN и автоподключение после перезапуска.</string>
-    <string name="auto_connect_carousel_third_slide_bottom_text">3. Чтобы включить режим блокировки, нажмите на переключатель рядом с пунктом &lt;b&gt;Блокировать соединения без VPN&lt;/b&gt;.&lt;br /&gt;&lt;br /&gt;&lt;b&gt;Предупреждение: этот параметр блокирует приложения из списка раздельного туннелирования и функцию «Обмен данными в локальной сети».&lt;/b&gt;</string>
-    <string name="auto_connect_carousel_third_slide_top_text">В системных настройках Android режим блокировки называется &lt;b&gt;Блокировать соединения без VPN&lt;/b&gt;. Он помогает минимизировать утечки, однако имеет ряд известных ограничений, о которых можно прочитать подробнее</string>
     <string name="auto_connect_carousel_third_slide_top_text_website_link">здесь</string>
-    <string name="auto_connect_footer_legacy">Вместо этого параметра используйте системный параметр &lt;b&gt;Постоянная VPN&lt;/b&gt;, следуя указаниям в разделе &lt;b&gt;%1$s&lt;/b&gt; выше.</string>
-    <string name="auto_connect_footer_legacy_tv">Автоматически подключаться при запуске приложения. В будущем эта опция будет заменена новой функцией подключения при запуске устройства.</string>
     <string name="auto_connect_legacy">Автоподключение (устаревшее)</string>
     <string name="automatic">Автоматически</string>
     <string name="back">Назад</string>
@@ -69,9 +64,10 @@
     <string name="confirm_no_email">Вы собираетесь отправить отчет о проблеме, не оставив контакты. Если вы хотите получить ответ, введите свой адрес электронной почты.</string>
     <string name="confirm_removal">Выйти из профиля на устройстве</string>
     <string name="congrats">Поздравляем!</string>
-    <string name="connect">Защитить подключение</string>
-    <string name="connected_using_daita">%1$s, используется %2$s</string>
-    <string name="connecting">Идет подключение</string>
+    <string name="connect">Подключить</string>
+    <string name="connect_panel_active_features">Активные функции</string>
+    <string name="connect_panel_connection_details">Сведения о подключении</string>
+    <string name="connected">Подключено</string>
     <string name="connecting_to_daemon">Подключение к системному сервису Mullvad...</string>
     <string name="connection_details_in">Вход</string>
     <string name="continue_login">Войти</string>
@@ -116,7 +112,6 @@
     <string name="disconnect">Отключить</string>
     <string name="disconnected">Разъединено</string>
     <string name="dismiss">Закрыть</string>
-    <string name="dns_content_blockers_custom_dns_warning">Внимание! Этот параметр нельзя использовать вместе с параметром &lt;b&gt;Пользовательский DNS-сервер&lt;/b&gt;.</string>
     <string name="dns_content_blockers_info">При включенной опции устройство не будет устанавливать соединение с определенными доменами и сайтами, известными распространением рекламы, вредоносного ПО, трекеров и т. д.</string>
     <string name="dns_content_blockers_warning">Это может привести к проблемам при использовании некоторых сайтов, служб и приложений.</string>
     <string name="dont_have_an_account">У вас нет номера учетной записи?</string>
@@ -146,9 +141,11 @@
     <string name="failed_to_set_current_test_error">Не удалось установить текущий метод: API недоступен</string>
     <string name="failed_to_set_current_unknown_error">Не удалось установить текущий метод: причина неизвестна</string>
     <string name="faqs_and_guides">Ответы на вопросы и руководства</string>
+    <string name="feature_custom_dns">Пользовательский DNS</string>
     <string name="feature_custom_mtu">MTU</string>
     <string name="feature_dns_content_blockers">DNS-блокировщики контента</string>
     <string name="feature_lan_sharing">Обмен данными в локальной сети</string>
+    <string name="feature_quantum_resistant">Квантовая устойчивость</string>
     <string name="feature_server_ip_override">Переопределение IP-адреса сервера</string>
     <string name="feature_udp_2_tcp">Обфускация</string>
     <string name="filter">Фильтр</string>
@@ -237,6 +234,7 @@
     <string name="please_enter_a_valid_ip_address">Введите действительный адрес IPv4 или IPv6</string>
     <string name="please_enter_a_valid_remote_server_port">Введите действительный порт удаленного сервера</string>
     <string name="port">Порт</string>
+    <string name="port_x">Порт: %1$s</string>
     <string name="privacy_disclaimer_body_first_paragraph">Чтобы удостовериться, что вы используете наиболее безопасную версию приложения, и сообщить вам о возможных проблемах в ней, приложение автоматически проверяет свою версию. При этом на серверы Mullvad передаются данные о версии приложения и системы Android. Mullvad ведет учет количества пользователей с определенными версиями приложения и ОС Android. Эти данные не хранятся и не используются каким бы то ни было образом, позволяющим вас идентифицировать.</string>
     <string name="privacy_disclaimer_body_second_paragraph">Если используется функция раздельного туннелирования, то приложение запрашивает в системе список всех установленных приложений. Этот список запрашивается только на  экране настройки раздельного туннелирования. Список установленных приложений никогда не передается за пределы устройства.</string>
     <string name="privacy_disclaimer_title">Конфиденциальность</string>
@@ -257,8 +255,6 @@
     <string name="reset_to_default_button">Восстановить значение по умолчанию</string>
     <string name="save">Сохранить</string>
     <string name="search_placeholder">Поиск...</string>
-    <string name="secure_connection">ЗАЩИЩЕННОЕ ПОДКЛЮЧЕНИЕ</string>
-    <string name="secured">Защита активна</string>
     <string name="select_location">Выбор местоположения</string>
     <string name="select_location_empty_text_first_row">По запросу &lt;b&gt;%1$s&lt;/b&gt; ничего не найдено.</string>
     <string name="select_location_empty_text_second_row">Измените условие поиска.</string>
@@ -318,11 +314,9 @@
     <string name="udp">UDP</string>
     <string name="udp_over_tcp_port_info">TCP-порт, к которому должен подключаться протокол обфускации UDP через TCP на VPN-сервере.</string>
     <string name="undo">Отменить</string>
-    <string name="unsecured">Защита неактивна</string>
-    <string name="unsecured_connection">НЕЗАЩИЩЕННОЕ ПОДКЛЮЧЕНИЕ</string>
-    <string name="unsecured_vpn_permission_error">Защита неактивна (нет разрешения для VPN)</string>
     <string name="unsupported_version">НЕПОДДЕРЖИВАЕМАЯ ВЕРСИЯ</string>
     <string name="unsupported_version_description">Эта версия приложения не поддерживается, что может угрожать неприкосновенности ваших данных. Обновите приложение.</string>
+    <string name="upd_over_tcp">UDP через TCP</string>
     <string name="update_dns_server_dialog_title">Обновить DNS-сервер</string>
     <string name="update_list_name">Обновление названия списка</string>
     <string name="use_method">Использовать метод</string>
