--- a/android/lib/resource/src/main/res/values-sv/strings.xml
+++ b/android/lib/resource/src/main/res/values-sv/strings.xml
@@ -43,8 +43,6 @@
     <string name="auto_connect_carousel_first_slide_top_text">Inställningar för Anslut automatiskt och Låsningsläge finns i Androids systeminställningar. Följ guiden för att aktivera en av dem eller båda.</string>
     <string name="auto_connect_carousel_second_slide_top_text">Anslut automatiskt kallas Alltid på-VPN i Androids systeminställningar och ser till att du är ansluten till VPN-tunneln oavbrutet och ansluter automatiskt efter omstart.</string>
     <string name="auto_connect_carousel_third_slide_top_text_website_link">här</string>
-    <string name="auto_connect_footer_legacy">Använd systeminställningen &lt;b&gt;Alltid aktiverat&lt;/b&gt; istället genom att följa guiden i &lt;b&gt;%1$s&lt;/b&gt; ovan.</string>
-    <string name="auto_connect_footer_legacy_tv">Ansluts automatiskt när appen startar. Inställningen kommer i en kommande uppdatering ersättas av en ny funktion som ansluter enheten när den startas.</string>
     <string name="auto_connect_legacy">Anslut automatiskt (äldre)</string>
     <string name="automatic">Automatisk</string>
     <string name="back">Tillbaka</string>
@@ -67,6 +65,8 @@
     <string name="confirm_removal">Ja, logga ut enheten</string>
     <string name="congrats">Grattis!</string>
     <string name="connect">Anslut</string>
+    <string name="connect_panel_active_features">Aktiva funktioner</string>
+    <string name="connect_panel_connection_details">Anslutningsinformation</string>
     <string name="connected">Ansluten</string>
     <string name="connecting_to_daemon">Ansluter till Mullvads systemtjänst...</string>
     <string name="connection_details_in">In</string>
@@ -141,9 +141,11 @@
     <string name="failed_to_set_current_test_error">Kan inte ställas in som aktuell – API kan inte nås</string>
     <string name="failed_to_set_current_unknown_error">Kan inte ställas in som aktuell – Okänd anledning</string>
     <string name="faqs_and_guides">Vanliga frågor och guider</string>
+    <string name="feature_custom_dns">Anpassad DNS</string>
     <string name="feature_custom_mtu">MTU</string>
     <string name="feature_dns_content_blockers">DNS-innehållsblockerare</string>
     <string name="feature_lan_sharing">Lokal nätverksdelning</string>
+    <string name="feature_quantum_resistant">Kvantresistens</string>
     <string name="feature_server_ip_override">Åsidosättning av server-IP</string>
     <string name="feature_udp_2_tcp">Obfuskering</string>
     <string name="filter">Filtrera</string>
@@ -232,6 +234,7 @@
     <string name="please_enter_a_valid_ip_address">Ange en giltig IPv4- eller IPv6-adress</string>
     <string name="please_enter_a_valid_remote_server_port">Ange en giltig fjärrserverport</string>
     <string name="port">Port</string>
+    <string name="port_x">Port: %1$s</string>
     <string name="privacy_disclaimer_body_first_paragraph">Appen genomför automatiska versionskontroller för att se till att du har den säkraste versionen och för att informera dig om problem med den nuvarande versionen. Appversionen och Android-systemversionen skickas till Mullvad-servrarna. Mullvad registrerar antalet använda appversioner och Android-versioner. Dessa data lagras aldrig och används inte på något sätt som kan identifiera dig.</string>
     <string name="privacy_disclaimer_body_second_paragraph">Om delade tunnlar används, frågar appen ditt system om en lista med alla installerade applikationer. Listan hämtas bara i vyn för delade tunnlar. Listan med installerade applikationer skickas aldrig från enheten.</string>
     <string name="privacy_disclaimer_title">Sekretess</string>
@@ -313,6 +316,7 @@
     <string name="undo">Ångra</string>
     <string name="unsupported_version">VERSION UTAN STÖD</string>
     <string name="unsupported_version_description">Din sekretess kan vara utsatt för risk med den här appversionen som inte stöds. Uppdatera nu.</string>
+    <string name="upd_over_tcp">UDP över TCP</string>
     <string name="update_dns_server_dialog_title">Uppdatera DNS-server</string>
     <string name="update_list_name">Uppdatera listnamn</string>
     <string name="use_method">Använd metod</string>
