--- a/android/lib/resource/src/main/res/values-th/strings.xml
+++ b/android/lib/resource/src/main/res/values-th/strings.xml
@@ -41,13 +41,8 @@
     <string name="auto_connect_and_lockdown_mode">เชื่อมต่ออัตโนมัติและโหมดล็อกดาวน์</string>
     <string name="auto_connect_and_lockdown_mode_footer">ตรวจสอบให้แน่ใจว่า อุปกรณ์อยู่ในช่องทาง VPN เสมอ</string>
     <string name="auto_connect_carousel_first_slide_top_text">การตั้งค่าการเชื่อมต่ออัตโนมัติและโหมดล็อกดาวน์ อยู่ในการตั้งค่าระบบ Android โปรดทำตามคำแนะนำนี้ เพื่อเปิดใช้งานโหมดใดโหมดหนึ่ง หรือทั้งสองโหมด</string>
-    <string name="auto_connect_carousel_second_slide_bottom_text">2. ในการเปิดใช้การเชื่อมต่ออัตโนมัติ ให้คลิกปุ่มเปิด/ปิดที่อยู่ถัดจาก &lt;b&gt;VPN เปิดอยู่เสมอ&lt;/b&gt;</string>
     <string name="auto_connect_carousel_second_slide_top_text">การเชื่อมต่ออัตโนมัติเรียกว่า Always-on VPN ในการตั้งค่าระบบ Android ซึ่งจะช่วยให้คุณมั่นใจได้ว่า คุณเชื่อมต่อกับช่องทาง VPN อย่างต่อเนื่อง และมีการเชื่อมต่ออัตโนมัติหลังจากรีสตาร์ต</string>
-    <string name="auto_connect_carousel_third_slide_bottom_text">3. ในการเปิดโหมดล็อกดาวน์ ให้คลิกปุ่มเปิด/ปิดที่อยู่ถัดจาก&lt;b&gt;ปิดกั้นการเชื่อมต่อโดยไม่ใช้ VPN&lt;/b&gt; &lt;br /&gt;&lt;br /&gt;&lt;b&gt;คำเตือน: การตั้งค่านี้จะบล็อกแอปที่มีการแยก และคุณลักษณะการแชร์เครือข่ายท้องถิ่น&lt;/b&gt;</string>
-    <string name="auto_connect_carousel_third_slide_top_text">โหมดล็อกดาวน์ถูกเรียกใช้ &lt;b&gt;ปิดกั้นการเชื่อมต่อโดยไม่ใช้ VPN&lt;/b&gt; ในการตั้งค่าระบบ Android ซึ่งจะช่วยลดการรั่วไหล แต่ก็มีข้อจำกัดบางประการ ซึ่งคุณสามารถอ่านข้อมูลเพิ่มเติมเกี่ยวกับเรื่องดังกล่าวได้</string>
     <string name="auto_connect_carousel_third_slide_top_text_website_link">ที่นี่</string>
-    <string name="auto_connect_footer_legacy">โปรดใช้การตั้งค่าระบบ&lt;b&gt;เปิดอยู่เสมอ&lt;/b&gt;แทน โดยทำตามคำแนะนำใน &lt;b&gt;%1$s&lt;/b&gt; ที่อยู่ด้านบน</string>
-    <string name="auto_connect_footer_legacy_tv">เชื่อมต่อโดยอัตโนมัติเมื่อเปิดแอป การตั้งค่านี้จะถูกแทนที่ด้วยคุณลักษณะใหม่ คือการเชื่อมต่อเมื่อเริ่มต้นอุปกรณ์ ในการอัปเดตในอนาคต</string>
     <string name="auto_connect_legacy">เชื่อมต่ออัตโนมัติ (เดิม)</string>
     <string name="automatic">อัตโนมัติ</string>
     <string name="back">ย้อนกลับ</string>
@@ -69,9 +64,10 @@
     <string name="confirm_no_email">คุณกำลังจะส่งรายงานปัญหา โดยไม่มีการระบุวิธีการติดต่อกลับให้กับเรา และคุณจำเป็นต้องป้อนที่อยู่อีเมลของคุณ หากคุณอยากให้เราตอบกลับการรายงานของคุณ</string>
     <string name="confirm_removal">ใช่ นำอุปกรณ์ออกจากระบบ</string>
     <string name="congrats">ยินดีด้วย!</string>
-    <string name="connect">รักษาความปลอดภัยในการเชื่อมต่อของฉัน</string>
-    <string name="connected_using_daita">%1$s กำลังใช้ %2$s</string>
-    <string name="connecting">กำลังเชื่อมต่อ</string>
+    <string name="connect">เชื่อมต่อ</string>
+    <string name="connect_panel_active_features">คุณลักษณะที่ใช้งาน</string>
+    <string name="connect_panel_connection_details">รายละเอียดการเชื่อมต่อ</string>
+    <string name="connected">เชื่อมต่อแล้ว</string>
     <string name="connecting_to_daemon">กำลังเชื่อมต่อบริการของระบบ Mullvad...</string>
     <string name="connection_details_in">เข้า</string>
     <string name="continue_login">เข้าสู่ระบบต่อ</string>
@@ -86,7 +82,6 @@
     <string name="creating_new_account">กำลังสร้างบัญชี...</string>
     <string name="critical_error">ข้อผิดพลาดร้ายแรง (คุณจำเป็นต้องตรวจสอบ)</string>
     <string name="current_method">ปัจจุบัน: %1$s</string>
-    <string name="custom_dns_disable_mode_subtitle">ปิดใช้งาน &lt;b&gt;%1$s&lt;/b&gt; ด้านบนทั้งหมด เพื่อเปิดใช้งานการตั้งค่านี้</string>
     <string name="custom_dns_footer">เปิดเพื่อเพิ่มเซิร์ฟเวอร์ DNS อย่างน้อยหนึ่งรายการ</string>
     <string name="custom_dns_hint">ป้อน IP</string>
     <string name="custom_list_error_list_exists">ชื่อนี้ถูกใช้ไปแล้ว</string>
@@ -117,7 +112,6 @@
     <string name="disconnect">ตัดการเชื่อมต่อ</string>
     <string name="disconnected">ตัดการเชื่อมต่อแล้ว</string>
     <string name="dismiss">ละทิ้ง</string>
-    <string name="dns_content_blockers_custom_dns_warning">โปรดทราบ: การตั้งค่านี้ไม่สามารถใช้ร่วมกับ &lt;b&gt;ใช้เซิร์ฟเวอร์ DNS แบบกำหนดเอง&lt;/b&gt;ได้</string>
     <string name="dns_content_blockers_info">ในขณะที่เปิดใช้งานคุณลักษณะนี้ คุณลักษณะนี้จะหยุดไม่ให้อุปกรณ์ติดต่อโดเมน หรือเว็บไซต์ใดๆ ที่เป็นที่ทราบกันว่า ใช้ในการเผยแพร่โฆษณา มัลแวร์ ตัวติดตาม และอื่นๆ</string>
     <string name="dns_content_blockers_warning">นี่อาจก่อให้เกิดปัญหากับบางเว็บไซต์ บริการ และแอปได้</string>
     <string name="dont_have_an_account">ยังไม่มีหมายเลขบัญชีใช่ไหม</string>
@@ -147,9 +141,11 @@
     <string name="failed_to_set_current_test_error">ไม่สามารถตั้งค่าเป็นปัจจุบันได้ - ไม่สามารถเข้าถึง API ได้</string>
     <string name="failed_to_set_current_unknown_error">ไม่สามารถตั้งค่าเป็นปัจจุบันได้ - ไม่ทราบสาเหตุ</string>
     <string name="faqs_and_guides">คำถามที่พบบ่อยและคำแนะนำ</string>
+    <string name="feature_custom_dns">DNS แบบกำหนดเอง</string>
     <string name="feature_custom_mtu">MTU</string>
     <string name="feature_dns_content_blockers">ตัวบล็อกเนื้อหา DNS</string>
     <string name="feature_lan_sharing">การแชร์ในเครือข่ายท้องถิ่น</string>
+    <string name="feature_quantum_resistant">การต่อต้านควอนตัม</string>
     <string name="feature_server_ip_override">โอเวอร์ไรด์ IP เซิร์ฟเวอร์</string>
     <string name="feature_udp_2_tcp">การทำให้ข้อมูลยุ่งเหยิง</string>
     <string name="filter">ตัวกรอง</string>
@@ -238,6 +234,7 @@
     <string name="please_enter_a_valid_ip_address">โปรดป้อนที่อยู่ IPv4 หรือ IPv6 ที่ถูกต้อง</string>
     <string name="please_enter_a_valid_remote_server_port">โปรดป้อนพอร์ตเซิร์ฟเวอร์ระยะไกลที่ถูกต้อง</string>
     <string name="port">พอร์ต</string>
+    <string name="port_x">พอร์ต: %1$s</string>
     <string name="privacy_disclaimer_body_first_paragraph">แอปจะตรวจสอบเวอร์ชันโดยอัตโนมัติ เพื่อให้แน่ใจว่า คุณใช้งานเวอร์ชันที่ปลอดภัยที่สุด และเพื่อแจ้งปัญหาใดๆ ของเวอร์ชันปัจจุบันที่ใช้งานอยู่ให้คุณทราบ โดยระบบจะส่งเวอร์ชันแอปและเวอร์ชันระบบ Android ไปยังเซิร์ฟเวอร์ Mullavid ซึ่ง Mullvad จะติดตามจำนวนเวอร์ชันแอปที่ใช้และเวอร์ชัน Android ทั้งนี้ข้อมูลจะไม่ถูกจัดเก็บ หรือนำไปใช้ในลักษณะใดๆ ที่สามารถระบุตัวตนคุณได้</string>
     <string name="privacy_disclaimer_body_second_paragraph">หากมีการใช้งานคุณลักษณะการแยกอุโมงค์ แอปจะขอให้ระบบของคุณระบุแอปพลิเคชันที่ติดตั้งไว้ทั้งหมด รายการนี้จะได้รับการเรียกใช้งานในมุมมองการแยกอุโมงค์เท่านั้น รายการแอปพลิเคชันที่ติดตั้งไว้ทั้งหมด จะไม่ถูกส่งออกจากอุปกรณ์</string>
     <string name="privacy_disclaimer_title">ความเป็นส่วนตัว</string>
@@ -319,6 +316,7 @@
     <string name="undo">เลิกทำ</string>
     <string name="unsupported_version">เวอร์ชันที่ไม่รองรับ</string>
     <string name="unsupported_version_description">ความเป็นส่วนตัวของคุณอาจมีความเสี่ยง ในขณะที่ใช้งานเวอร์ชันแอปที่ไม่ได้รับการสนับสนุนนี้ โปรดอัปเดตตอนนี้เลย</string>
+    <string name="upd_over_tcp">UDP-ผ่าน-TCP</string>
     <string name="update_dns_server_dialog_title">อัปเดตเซิร์ฟเวอร์ DNS</string>
     <string name="update_list_name">อัปเดตชื่อรายการ</string>
     <string name="use_method">ใช้วิธีการ</string>
