--- a/android/lib/resource/src/main/res/values-tr/strings.xml
+++ b/android/lib/resource/src/main/res/values-tr/strings.xml
@@ -42,11 +42,7 @@
     <string name="auto_connect_and_lockdown_mode_footer">Cihazın her zaman VPN tünelinde olduğundan emin olun.</string>
     <string name="auto_connect_carousel_first_slide_top_text">Otomatik Bağlantı ve Kilitleme modu ayarları Android sistem ayarlarında yer alır. Bu ayarlardan birini veya her ikisini de etkinleştirmek için bu kılavuza göz atın.</string>
     <string name="auto_connect_carousel_second_slide_top_text">Otomatik bağlantı, Android sistem ayarlarında VPN her zaman açık olarak gösterilir ve VPN tüneline sürekli bağlı olmanızı ve yeniden başlatma sonrası otomatik olarak bağlanmanızı sağlar.</string>
-    <string name="auto_connect_carousel_third_slide_bottom_text">3. Kilitleme modunu etkinleştirmek için &lt;b&gt;VPN üzerinden olmayan bağlantıları engelle&lt;/b&gt; seçeneğinin yanındaki düğmeye tıklayın.&lt;br /&gt;&lt;br /&gt;&lt;b&gt;Uyarı: Bu ayar, bölünmüş uygulamaları ve Yerel Ağ Paylaşımı özelliğini engeller. &lt;/b&gt;</string>
-    <string name="auto_connect_carousel_third_slide_top_text">Android sistem ayarlarında Kilitleme modu &lt;b&gt;VPN üzerinden olmayan bağlantıları engelle&lt;/b&gt; olarak adlandırılmıştır. Sızıntıları en aza indirmeye yardımcı olsa da ayrıntılar konusunda bilgi edinmeniz gereken bazı bilinen sınırlamaları vardır</string>
     <string name="auto_connect_carousel_third_slide_top_text_website_link">burada</string>
-    <string name="auto_connect_footer_legacy">Lütfen yukarıdaki &lt;b&gt;%1$s&lt;/b&gt; bölümündeki kılavuzu izleyerek &lt;b&gt;Her zaman açık&lt;/b&gt; sistem ayarını kullanın.</string>
-    <string name="auto_connect_footer_legacy_tv">Uygulama başlatıldığında otomatik olarak bağlan. Bu ayar, daha sonraki bir güncellemede yeni bir cihazda bağlantı başlatma özelliğiyle değiştirilecektir.</string>
     <string name="auto_connect_legacy">Otomatik bağlan (eski)</string>
     <string name="automatic">Otomatik</string>
     <string name="back">Geri</string>
@@ -68,9 +64,10 @@
     <string name="confirm_no_email">Sorun raporunu, size geri dönüş yapmamıza imkan vermeyen bir şekilde göndermek üzeresiniz. Sorununuz için yanıt almak istiyorsanız bir e-posta adresi girmelisiniz.</string>
     <string name="confirm_removal">Evet, cihazdan çıkış yap</string>
     <string name="congrats">Tebrikler!</string>
-    <string name="connect">Bağlantımın güvenliğini sağla</string>
-    <string name="connected_using_daita">%1$s, %2$s özelliğini kullanıyor</string>
-    <string name="connecting">Bağlanılıyor</string>
+    <string name="connect">Bağlan</string>
+    <string name="connect_panel_active_features">Aktif özellikler</string>
+    <string name="connect_panel_connection_details">Bağlantı ayrıntıları</string>
+    <string name="connected">Bağlandı</string>
     <string name="connecting_to_daemon">Mullvad sistem hizmetlerine bağlanılıyor...</string>
     <string name="connection_details_in">Giriş</string>
     <string name="continue_login">Giriş yapmak için devam et</string>
@@ -85,7 +82,6 @@
     <string name="creating_new_account">Hesap oluşturuluyor...</string>
     <string name="critical_error">Kritik hata (Lütfen dikkatli olun)</string>
     <string name="current_method">Geçerli: %1$s</string>
-    <string name="custom_dns_disable_mode_subtitle">Bu ayarı etkinleştirmek için yukarıdaki &lt;b&gt;%1$s&lt;/b&gt; seçeneklerin tümünü devre dışı bırakın.</string>
     <string name="custom_dns_footer">En az bir DNS sunucusu eklemek için etkinleştirin.</string>
     <string name="custom_dns_hint">IP\'yi girin</string>
     <string name="custom_list_error_list_exists">İsim zaten kullanılıyor.</string>
@@ -116,7 +112,6 @@
     <string name="disconnect">Bağlantıyı Kes</string>
     <string name="disconnected">Bağlantı kesildi</string>
     <string name="dismiss">Reddet</string>
-    <string name="dns_content_blockers_custom_dns_warning">Dikkat: Bu ayar, &lt;b&gt;Özel DNS sunucusu kullan&lt;/b&gt; seçeneği ile birlikte kullanılamaz.</string>
     <string name="dns_content_blockers_info">Bu özellik etkinleştirildiğinde, cihazınızın reklamlar, kötü amaçlı yazılımlar, izleyiciler ve daha fazlasını dağıttığı bilinen belirli alan adlarıyla veya web siteleriyle iletişim kurmasını durdurur.</string>
     <string name="dns_content_blockers_warning">Bu, belirli web sitelerinde, hizmetlerde ve uygulamalarda sorunlara neden olabilir.</string>
     <string name="dont_have_an_account">Hesap numaranız yok mu?</string>
@@ -146,9 +141,11 @@
     <string name="failed_to_set_current_test_error">Geçerli olarak ayarlanamadı - API\'ye ulaşılamıyor</string>
     <string name="failed_to_set_current_unknown_error">Geçerli olarak ayarlanamadı - Bilinmeyen neden</string>
     <string name="faqs_and_guides">SSS ve Kılavuzlar</string>
+    <string name="feature_custom_dns">Özel DNS</string>
     <string name="feature_custom_mtu">MTU</string>
     <string name="feature_dns_content_blockers">DNS içerik engelleyiciler</string>
     <string name="feature_lan_sharing">Yerel ağ paylaşımı</string>
+    <string name="feature_quantum_resistant">Kuantum direnci</string>
     <string name="feature_server_ip_override">Sunucu IP\'sini geçersiz kılma</string>
     <string name="feature_udp_2_tcp">Gizleme</string>
     <string name="filter">Filtrele</string>
@@ -237,6 +234,7 @@
     <string name="please_enter_a_valid_ip_address">Lütfen geçerli bir IPv4 veya IPv6 adresi girin</string>
     <string name="please_enter_a_valid_remote_server_port">Lütfen geçerli bir uzak sunucu portu girin</string>
     <string name="port">Port</string>
+    <string name="port_x">Port: %1$s</string>
     <string name="privacy_disclaimer_body_first_paragraph">Uygulama, en güvenli sürüme sahip olduğunuzdan emin olmak ve çalışan mevcut sürümle ilgili sorunları size bildirmek için sürüm kontrollerini otomatik olarak gerçekleştirir. Bu işlem, uygulama sürümünü ve Android sistem sürümünü Mullvad sunucularına gönderir. Mullvad, kullanılan uygulama sürümlerinin ve Android sürümlerinin numarasını kaydeder. Veriler asla sizi tanımlayacak şekilde saklanmaz veya kullanılmaz.</string>
     <string name="privacy_disclaimer_body_second_paragraph">Bölünmüş tünelleme özelliği kullanılıyorsa uygulama, yüklü tüm uygulamaların bir listesi için sisteminizi sorgular. Bu liste yalnızca bölünmüş tünelleme görünümünde alınır. Yüklü uygulamaların listesi hiçbir zaman cihazdan gönderilmez.</string>
     <string name="privacy_disclaimer_title">Gizlilik</string>
@@ -318,6 +316,7 @@
     <string name="undo">Geri al</string>
     <string name="unsupported_version">DESTEKLENMEYEN SÜRÜM</string>
     <string name="unsupported_version_description">Bu desteklenmeyen uygulama sürümüyle gizliliğiniz risk altında olabilir. Lütfen hemen güncelleyin.</string>
+    <string name="upd_over_tcp">TCP üzerinden UDP</string>
     <string name="update_dns_server_dialog_title">DNS sunucusunu güncelle</string>
     <string name="update_list_name">Liste adını güncelle</string>
     <string name="use_method">Yöntemi kullan</string>
